--- a/estilos.css
+++ b/estilos.css
@@ -1,1 +1,266 @@
+@import "/css/reset.css";@import "/css/grid_12.css";@import "/css/superfish.css";
+article,aside,audio,canvas,command,datalist,details,embed,figcaption,figure,footer,header,hgroup,keygen,meter,nav,output,progress,section,source,video{
+	display:inline-table;
+}mark,rp,rt,ruby,summary,time{display:inline}
+/* Global properties ======================================================== */
+html {width:100%}
 
+body {
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:14px;
+	line-height:normal;
+	color:#000000;
+	min-width:800px;
+	background-color: #FFFFFF;
+	background-position: left top;
+	left: 80px;
+}
+.main {
+	width:1040px;
+	padding:0;
+	margin-top: 0;
+	margin-right: 0;
+	margin-bottom: 500;
+	margin-left: 0px;
+}
+/*********************************fonts*************************************/
+p {
+	margin-bottom:0px;
+	margin-top: 0px;
+}
+.p2{ margin-bottom:12px;}
+.p3{ margin-bottom:40px;}
+.p4{ margin-bottom:10px;}
+.p5{ margin-bottom:20px;}
+.p6{}
+
+.reg {text-transform:uppercase}
+.f_left {float:left}
+.f_right {float:right}
+.align_right {text-align:right}
+.align_center {text-align:center}
+
+.italic{font-style:italic}
+.letter {letter-spacing:-1px}
+
+/*********************************CLASSES**********************************/
+.m_bottom_zero{ margin-bottom:0 !important;}
+.m_left_zero{ margin-left:0 !important;}
+.p_bottom_zero{ padding-bottom:0 !important;}
+.p_left_zero{ padding-left:0 !important;}
+
+.clear {clear:both;width:100%;line-height:0;font-size:0;}
+.wrapper {width:100%;overflow:hidden}
+.extra_wrapper{ overflow:hidden;}
+.container{width:100%}
+.extra_last, .last{ margin-bottom:0 !important; padding-bottom:0 !important;}
+.extra_last{ border:none !important; background:none !important;}
+
+/*==================================== Links ======================================================== */
+a {color:#848383;outline:none; text-decoration:none; cursor:pointer;}
+a:hover{ color:#333; text-decoration:none;}
+.button{ display:inline-block; padding:7px 14px; border-radius:4px; margin: 42px 0 0 0; font-size: 20px; line-height: 24px; color:#fff; background:#000;}
+.button:hover{ background:#dbdbdb; color:#000;}
+.but_ind{margin: 40px 0 0 0;}
+/*================================>> hovers <<========================================*/
+.links span, .history div span{-webkit-transition: all 0.3s ease;-moz-transition: all 0.3s ease;-o-transition: all 0.3s ease;transition: all 0.3s ease;}
+
+/*********************************Displays*************************************/
+.block{ display:block;}
+.inline-block{ display:inline-block;}
+
+/*********************************header*************************************/
+
+header {
+	padding-top: 0px;
+	padding-right: 10px;
+	padding-bottom: 0;
+	padding-left: 10px;
+}
+header h1{width:233px; margin: 0 auto 39px;}
+header h1 a {display:block;width:233px;height:156px;background:url(/web/20161220060402im_/http://gilver.es/images/logo.jpg) 0 0 no-repeat; text-decoration:none; text-indent:-9999px;}
+/*********************************content*************************************/
+#content {padding:43px 0px 51px 0px; position:relative;}
+.cont_pad{padding:43px 0 51px 0 !important;}
+
+/*================================>> LISTS <<========================================*/
+.list1{}
+.list1 li{ margin-bottom:8px;}
+.list1 a{ background:url(/web/20161220060402im_/http://gilver.es/images/marker1.jpg) 0 7px no-repeat; padding-left:17px; display:inline-block;}
+.list2{}
+.list2 li{ background:url(/web/20161220060402im_/http://gilver.es/images/marker2.png) 0 7px no-repeat; padding-left:20px;}
+.list2 a{}
+.list3{}
+.list3 li{ background:url(/web/20161220060402im_/http://gilver.es/images/marker3.png) 0 7px no-repeat; padding-left:20px;}
+.list3 a{}
+
+/*================================>> H <<========================================*/
+h2,h3,h4{ font-weight:normal;}
+h2{font-size: 39px; line-height: 48px; color:#000;}
+h2.ind{ margin-bottom:28px;}
+h2.ind1{ margin-bottom:33px;}
+h2.ind2{ margin-bottom:32px;}
+h3{font-size: px; line-height: px; color:#;}
+h3.ind1{ margin-bottom:px;}
+h3.ind2{ margin-bottom:px;}
+h3.ind3{ margin-bottom:px;}
+h2, .button{ text-transform:uppercase;}
+/*================================>> GOOGLE FONTS  <<========================================*/
+
+/*********************************MAIN_PAGE*************************************/
+#index h1{width:233px; margin: 0 auto;padding:117px 10px 0px;}
+#index h1 a{ text-indent:-999999px;display:block;width:233px;height:156px;background:url(/web/20161220060402im_/http://gilver.es/images/logo.jpg) 0 0 no-repeat; text-decoration:none;}
+#index section{padding-bottom:14px; padding-top:36px !important;}
+/*================================>> ROUBND ABOUT <<========================================*/
+.flash{
+	background:url(/web/20161220060402im_/http://gilver.es/images/flsh_bg.jpg) 50% 0 no-repeat;
+	width:100%;
+	height:250px;
+	position:relative;
+	margin-top: 0px;
+	margin-right: 0;
+	margin-bottom: 0;
+	margin-left: 0;
+}
+.flash .prev, .flash .next{ display:block;width:20px; position:absolute; z-index:999; height:35px; top:165px;}
+.flash .prev{ background:url(/web/20161220060402im_/http://gilver.es/images/round_prev.jpg) 0 0 no-repeat; left:-10px;}
+.flash .next{ background:url(/web/20161220060402im_/http://gilver.es/images/round_next.jpg) 0 0 no-repeat; right:-10px;}
+#index .flash .prev{ background:url(/web/20161220060402im_/http://gilver.es/images/round_prev.jpg) 0 0 no-repeat; left:-50px;}
+#index .flash .next{ background:url(/web/20161220060402im_/http://gilver.es/images/round_next.jpg) 0 0 no-repeat; right:-50px;}
+.flash .prev:hover, .flash .next:hover{ background-position: 0 -35px !important;}
+.enter_wrap{ text-align:center;padding:14px 0 0 0px;}	
+.enter{font-size: 52px; line-height: 64px; text-transform:uppercase; color:#000; display:inline-block;}
+.enter:hover{ color:#CCC;}
+/*********************************page_1*************************************/
+.img_box{ overflow:hidden;}
+.img_box figure{ float:left;}
+.img_box div{ float:right;}
+.news span, .sf-menu li a{text-transform:uppercase;}
+.news{}
+.news a{}
+.news li{ margin-bottom:24px;}
+.news span{font-size: 16px; color:#000; display:inline-block; margin-bottom:6px;}
+/*********************************page_2*************************************/
+strong{ color:#000;}
+.glange div{width:300px; margin-right:21px;}
+.glange p{ margin-bottom:10px;}
+.p_top{ padding-top:5px;}
+.history{ margin-bottom:30px;}
+.history div{width:220px; margin-right:10px;}
+.history figure{font-size: 39px; line-height: 48px; color:#ccc; margin-top:-4px;}
+.history div span, .span{ display:inline-block; background:url(/web/20161220060402im_/http://gilver.es/images/hist_span.jpg) no-repeat; width:11px;height:16px; margin: 2px 0 0 1px;}
+.history a:hover span, .links:hover span{ background-position: 0 -16px;}
+.b_bottom{ background:url(/web/20161220060402im_/http://gilver.es/images/b_bottom.jpg) 10px bottom no-repeat; padding-bottom:45px; margin-bottom:43px}
+.leadership{ margin-bottom:39px;}
+.lead div{ width:165px;}
+.lead div p{ margin-bottom:10px;}
+.font_16{font-size: 16px; line-height: 19px; color:#000;}
+/*********************************page_3*************************************/
+.prod_table{width:869px; margin: 25px 0px 0 9px;}
+.prod_table th{ color:#FFFFFF; font-weight:bold; background:#000; text-align:left;}
+.prod_table tr th, .prod_table tr td{ border-left:1px solid #e4e4e4; padding:6px 0 6px 19px; width:270px;}
+.prod_table tr td{padding:7px 0 5px 19px; border-bottom:1px solid #e4e4e4;}
+.first td{ padding-top:8px !important;}
+.prod_table tr th:first-child, .prod_table tr td:first-child{ border-left:none;}
+.prod_table{ background:#fafafa}
+/*********************************page_4*************************************/
+.clients_box{
+	margin-bottom:51px;
+	margin-right: 0px;
+}
+.client{
+	float:left;
+	width:336px;
+	margin-left:0px;
+}
+.client img{ margin-bottom:23px;}
+.clients_box .client:first-child{margin: 0 0 0 0;}
+
+/*********************************page_5*************************************/
+
+/* Contact form */
+#contact-form {padding:0px 0 0 0;}
+#contact-form .success {width:246px; margin-bottom:10px;}
+#contact-form textarea, #contact-form input {margin:0;font-size:14px; border:1px solid #e3e3e3; color:#848383; padding:8px 8px 5px; box-shadow:inset 1px 1px #ababab; outline:none; position:relative; font-family:Arial, Helvetica, sans-serif;background:#fff;}
+#contact-form input {width:282px;}
+#contact-form textarea {overflow:auto; width:282px; height:216px;resize:vertical;margin: 0 0 0 0; float:left;}	
+#contact-form label {display:block; padding-bottom:9px; overflow:hidden;}	
+#contact-form label.message { display:block; padding-bottom:0; }
+#contact-form .button {margin-left:8px;}	
+#contact-form .error, #contact-form .empty, #contact-form .success {display:none;}	
+#contact-form .error, #contact-form .empty {text-align:left; color:red; font-size:11px; clear:both;}
+#contact-form .buttons2 {overflow:hidden;text-align:right; position:relative; clear:both; padding-top:10px;}
+#contact-form .buttons2 a {
+	cursor:pointer;
+	margin-top:0;
+	text-align:center;
+}
+#contact-form span{ display:block; margin: 0px 0 0 5px;}
+.l_height{ line-height:24px;}
+.map_wrapper{
+	overflow:hidden;
+	margin-bottom:22px;
+	display:inline-block;
+	margin-left: 0px;
+}
+#map_canvas {
+	width:400px;
+	height:200px;
+}
+.adress{ padding-top:1px;}
+.adress span{
+	display:inline-block;
+	width:100px;
+}
+.adress dt{ margin-bottom:14px;}
+.adress a{}
+.adress a:hover, .link:hover{ text-decoration:underline;}
+/****************************footer************************/
+footer {
+	padding:28px 0 35px;
+	background:none;
+	margin: 0 10px;
+	border-top:1px solid #e0e0e0;
+	text-align:center;
+	font-size:12px;
+}
+footer, footer a{
+	font-family:Arial, Helvetica, sans-serif;
+	text-transform:none;
+	color:#000;
+}
+footer a:hover{ color:#999999;}
+.social{
+	width:700px;
+	overflow:auto;
+	margin-top: 0;
+	margin-right: auto;
+	margin-bottom: 22px;
+	margin-left: auto;
+}
+.social a{ display:block; float:left; overflow:hidden;width:29px;height:28px; margin-left:1px; margin-right:1px;}
+.social a:first-child{ margin-left:2px; margin-right:0px;}
+.social a:hover img{ margin-top:-28px;}
+#easyTooltip {font-size:12px;background:#fff;padding:3px 5px;border:1px solid #000}
+
+/*
+     FILE ARCHIVED ON 06:04:02 Dec 20, 2016 AND RETRIEVED FROM THE
+     INTERNET ARCHIVE ON 10:17:45 Oct 12, 2019.
+     JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
+
+     ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
+     SECTION 108(a)(3)).
+*/
+/*
+playback timings (ms):
+  esindex: 0.012
+  load_resource: 485.401
+  PetaboxLoader3.datanode: 62.543 (5)
+  LoadShardBlock: 25.343 (3)
+  PetaboxLoader3.resolve: 407.947 (2)
+  exclusion.robots: 0.116
+  RedisCDXSource: 0.499
+  captures_list: 38.498
+  CDXLines.iter: 10.51 (3)
+  exclusion.robots.policy: 0.108
+*/
